--- a/home.html
+++ b/home.html
@@ -1,17 +1,62 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+
+
 <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="HTML,CSS,JAVASCRIPT"/>
-    <meta name="viewport" content="width=device-width , initial scale=1.0"/>
-    <link rel="stylesheet"  type="text/css" href="style.css" />
-    <script type="text/javascript" src="javascript.js"></script>
-    <title>carrer guidance for students after class 12</title>
+    <title> Sign In page to create their account</title>
+    <link rel="stylesheet" href="Scripts/style.css" />
+    <script type="text/javascript" src="fonts/javascript.js"></script>
 </head>
-<body>
-    <div class="top">
-    <a class="top-left" ahref='//www.w3schools.com'>Carrer Guidance</a>
-    <b class=" top-right" ><input type="text" placeholder="search"</b>
-     </div>
+<body id="sb">
+    
+        <table class="ii" width="60%" align="center" cellpadding="4px" cellspacing="10px" >
+            <tr >
+            <td>
+            <qq>Name:</qq>
+            </td>
+            <td>
+            <input type="text" />
+            </td>
+            </tr>
+            <tr>
+                <td>
+                    <qq>Mobile No.:</qq>
+                </td>
+                <td>
+                    <input type="number" id="mobile" maxlength="10" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <qq>E-mail id:</qq>
+                </td>
+                <td>
+                    <input type="email" id="email" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <qq>Create a password:</qq>
+                </td>
+                <td>
+                    <input type="password" id="p1" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <qq>Confirm your password</qq>
+                </td>
+                <td>
+                    <input type="password" id="p2" />
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <button type="submit" onclick="myfunc()">Submit</button>
+                </td>
+            </tr>   
+            </table>
+    
 </body>
 </html>
